-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.9.0 Beta 2, 5.9.0 Beta 3, 5.9.0 RC, 5.9.0
-
None
-
Wndows10-1703 and default Chinese IME
-
5bc8671260bc716be9dffe61e84c214ca37ca5f6
Steps to reproduce:
1. use simplebrowser demo open https://docs.google.com/document/d/1D2YoMcbhp4z2uWG9sJAysgpMmXyQYzpdZ56l8KXvYZk/edit
2. try typing some words into URL bar.
3. then typing some words into google docs, the position of IME was wrong.
I guess that because the position of the IME does not update when the cursor focus in webpage. The qt 5.7.1 work fine.
- relates to
-
QTBUG-61548 WIndows: With some 3rdparty IME, the IME window is 'stuck' in a previous spot
-
- Closed
-
| For Gerrit Dashboard: QTBUG-60334 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 197301,4 | Fix location of IME window on Windows | 5.9 | qt/qtwebengine | Status: MERGED | -2 | 0 |
| 197340,1 | QPA/Windows: Allow for cursor rectangle with empty width | 5.9 | qt/qtbase | Status: ABANDONED | 0 | 0 |