Fix location of IME window on Windows

SelectionRegion::caret_rect is only documented to be supported on
macOS, so use anchor, focus instead. Also make sure that the rect
always has a width > 0; Both the Windows QPA and the native API
require this.

Task-number: QTBUG-60334
Change-Id: I8436fbfaa204d243578b33cbcaa3f28871b462ee
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>